[tool.poetry]
name = "django_site"
version = "0.1.0"
description = ""
authors = ["aleksey <football4113@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
